kubernetes/bazarr/prod-d1/ani-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: anibazarr
  name: anibazarr
  namespace: bazarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anibazarr
  template:
    metadata:
      labels:
        app: anibazarr
    spec:
      containers:
        - name: anibazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
          - name: http
            containerPort: 6767
          volumeMounts:
          - name: anibazarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: anibazarr-config
          persistentVolumeClaim:
            claimName: anibazarr-pvc
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/
