kubernetes/bazarr/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-web
  namespace: bazarr
  labels:
    app: bazarr
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
  selector:
    app: bazarr
