kubernetes/bazarr/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: bazarr
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: bazarr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-web
                port:
                  number: 6767
  tls:
    - hosts:
        - bazarr.kube-prod-d1.mclacken.net
      secretName: bazarr-certificate-secret
